--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "react-native-screens": "3.31.1",
     "react-native-share": "^11.0.4",
     "react-native-svg": "15.2.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
