--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@heroicons/react": "^2.1.5",
     "@popmotion/popcorn": "^0.4.4",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -30,6 +31,7 @@
     "expo-linear-gradient": "^13.0.2",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.5",
+    "expo-notifications": "^0.28.19",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
@@ -37,6 +39,7 @@
     "nativewind": "^2.0.11",
     "randomcolor": "^0.6.2",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
@@ -51,9 +54,7 @@
     "react-native-share": "^11.0.4",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
